[package]
name = "chocopy-compiler-rs"
version = "0.1.0"
authors = ["Joon <guswns0528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
lazy_static = "1.4.0"
